# oss-client

./: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/component/: ModalComponent.tsx
src/pages/: Index.tsx
src/routers/: router.tsx
src/store/: index.ts
src/style/: app.css  index.css
